# etherpad-proxy

./: .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  LICENSE.md  README.md  admin.go  app.js  app.ts  checkAvailability.go  checkAvailability.js  checkAvailability.ts  checkAvailability_test.go  db.go  dirty.db  docker-compose.yml  go.mod  go.sum  main.go  package-lock.json  package.json  pnpm-lock.yaml  proxyHandler.go  proxyHandler_test.go  runtime.go  runtime.ts  settings.json.sqlite.template  settings.json.template  tsconfig.json  vitest.config.ts
.github/: 1maxPadPerInstance.yml  3maxPadPerInstance.yml  npmpublish.yml  remoteLoad.yml
.github/workflows/: 1maxPadPerInstance.yml  3maxPadPerInstance.yml  backend-tests.yml  build.yml  lint-package-lock.yml  npmpublish.yml  rapidUniqueness.yml  release.yml  remoteLoad.yml  stale.yml  test.yml
databases/: database.go
databases/interfaces/: iDB.go
databases/postgres/: postgres_db.go  postgres_db_test.go
databases/sqlite/: sqlite_db.go  sqlite_db_test.go
docs/superpowers/plans/: 2026-05-28-production-ready-proxy.md
metrics/: metrics.go
models/: AvailableBackends.go  CheckAvailabilityModel.go  DBBackend.go  ListAllPadsModel.go  Settings.go  StatsRequest.go  backendstate_test.go  settings_test.go
src/: db.rs  error.rs  logging.rs  main.rs  reverse_proxy.rs  runtime.rs  settings.rs  stat.rs
support/: etherpad-proxy.service  settings.json
test/: 1maxPerInstance.spec.ts
ui/: error.templ  error_templ.go  management.templ  management_templ.go
(+1 files in other folders)
