[package]
name = "etherpad-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
anyhow = "1.0.97"
socketioxide = "0.16.1"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.14", features = ["blocking", "rustls-tls", "json"] }
env_logger = "0.11.7"
log = "0.4.26"
chrono = "0.4.40"
hyper-reverse-proxy = "0.5.1"
hyper = { version = "0.14.32", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"